--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 박성빈의 비망록
-description: 비망록 : 잊지 않으려고 중요한 골자를 적어 둔 것. 또는 그런 책자
+description: 비망록
 keywords: Modern, Blogging, Fun
 author: Wferr
 baseurl: "" # the subpath of your site, e.g. /blog/
